closer view of headshot

--- a/index.html
+++ b/index.html
@@ -1243,7 +1243,8 @@
       height: 100%;
       border-radius: 50%;
       object-fit: cover;
-      object-position: center 15%;
+      object-position: center 18%;
+      transform: scale(1.4);
     }
 
     .contact-photo-hint {
