--- a/index.html
+++ b/index.html
@@ -1252,7 +1252,7 @@
       border-radius: 50%;
       background-image: url('images/Graduate%20Photo.jpg');
       background-size: 250%;
-      background-position: center 15%;
+      background-position: 55% 15%;
     }
 
     .contact-photo-hint {
