Updated meta description:  "25+ years building solutions, driving adoption, and leading change."  Favicon (favicon.svg):  Shows "CSS" (your initials!) with RGB cycling animation Place in same folder as index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Christie Stephenson Saavedra | OCM & Instructional Design</title>
-  <meta name="description" content="Organizational Change Management and Instructional Design professional with 20+ years experience driving technology adoption through strategic communications and training development.">
+  <meta name="description" content="25+ years building solutions, driving adoption, and leading change.">
+  
+  <!-- Open Graph / Social Media Preview -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://christiesaavedra.com/">
+  <meta property="og:title" content="Christie Stephenson Saavedra | OCM & Instructional Design">
+  <meta property="og:description" content="25+ years building solutions, driving adoption, and leading change.">
+  <meta property="og:image" content="https://christiesaavedra.com/images/og-image.png">
+  
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Christie Stephenson Saavedra | OCM & Instructional Design">
+  <meta name="twitter:description" content="25+ years building solutions, driving adoption, and leading change.">
+  <meta name="twitter:image" content="https://christiesaavedra.com/images/og-image.png">
+  
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
