--- a/index.html
+++ b/index.html
@@ -2075,6 +2075,7 @@
     @media (max-width: 950px) {
       .hamburger {
         display: flex;
+        z-index: 1002;
       }
 
       .nav-links {
@@ -2082,17 +2083,19 @@
         position: fixed;
         top: 0;
         left: 0;
-        right: 0;
-        bottom: 0;
+        width: 100vw;
+        height: 100vh;
         background: rgba(253, 252, 250, 0.98);
         backdrop-filter: blur(12px);
         -webkit-backdrop-filter: blur(12px);
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        gap: 2rem;
-        z-index: 1000;
+        gap: 1.5rem;
+        z-index: 1001;
         padding: 2rem;
+        margin: 0;
+        box-sizing: border-box;
       }
 
       .nav-links.active {
@@ -2101,12 +2104,14 @@
 
       .nav-links li {
         list-style: none;
+        text-align: center;
       }
 
       .nav-links a {
         font-size: 1.5rem;
         font-family: var(--font-display);
         color: var(--color-text);
+        text-decoration: none;
       }
 
       .nav-links a:hover {
@@ -2123,7 +2128,12 @@
       }
 
       .nav-actions {
-        z-index: 1001;
+        z-index: 1002;
+      }
+
+      /* Hide desktop resume dropdown on mobile */
+      .resume-dropdown {
+        display: none;
       }
     }
 
