Priority 1: Bug Fixes - COMPLETE 🎉 #IssueStatus1Philosophy Modal × close button not visible✅2Contact Form Formspree broken✅3Contact Form doesn't redirect✅4LinkedIn links broken (3 places)✅5Nav LinkedIn link✅ Already correct6Case study "Back" links (5 files)✅
Priority 1: Bug Fixes - COMPLETE 🎉
#IssueStatus1Philosophy Modal × close button not visible✅2Contact Form Formspree broken✅3Contact Form doesn't redirect✅4LinkedIn links broken (3 places)✅5Nav LinkedIn link✅ Already correct6Case study "Back" links (5 files)✅

--- a/gardner-chiropractic.html
+++ b/gardner-chiropractic.html
@@ -74,7 +74,7 @@
 </head>
 <body>
   <div class="page-wrapper">
-    <nav class="nav" id="nav"><div class="nav-bg"><div class="nav-container"><a href="index.html" class="nav-back"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="15 18 9 12 15 6"/></svg>Back to Portfolio</a><a href="index.html" class="nav-logo">Christie Stephenson Saavedra</a></div></div></nav>
+    <nav class="nav" id="nav"><div class="nav-bg"><div class="nav-container"><a href="index.html#work" class="nav-back"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="15 18 9 12 15 6"/></svg>Back to Portfolio</a><a href="index.html" class="nav-logo">Christie Stephenson Saavedra</a></div></div></nav>
 
     <section class="hero">
       <div class="hero-container">
