--- a/index.html
+++ b/index.html
@@ -1076,9 +1076,19 @@
       gap: 0.75rem;
     }
 
-    .identity-modal-link svg {
+      .identity-modal-link svg {
       width: 16px;
       height: 16px;
+    }
+
+    /* Fix: Dark close button for light modal background */
+    .identity-modal-content .modal-close {
+      background: rgba(0, 0, 0, 0.08);
+      color: var(--color-text-secondary);
+    }
+
+    .identity-modal-content .modal-close:hover {
+      background: rgba(0, 0, 0, 0.15);
     }
 
 
@@ -2738,7 +2748,7 @@
         <p class="contact-subtitle">I'm always interested in discussing new opportunities.</p>
         
         <!-- Contact Form -->
-        <form class="contact-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+      <form class="contact-form" action="https://formspree.io/f/xaqnyaaw" method="POST" target="_blank">
           <div class="form-group">
             <label for="name">Name</label>
             <input type="text" id="name" name="name" required placeholder="Your name">
@@ -2763,7 +2773,7 @@
         <!-- Alternative Contact -->
         <div class="contact-alt">
           <span>Or connect directly:</span>
-          <a href="https://linkedin.com/in/christiesaavedra" target="_blank" class="contact-alt-link">
+         <a href="https://linkedin.com/in/christie-stephenson-saavedra" target="_blank" class="contact-alt-link">
             <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
               <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
             </svg>
@@ -2821,7 +2831,7 @@
           </div>
         </a>
         
-        <a href="https://linkedin.com/in/christiesaavedra" target="_blank" class="contact-option">
+        <a href="https://linkedin.com/in/christie-stephenson-saavedra" target="_blank" class="contact-option">
           <div class="contact-option-icon linkedin">
             <svg viewBox="0 0 24 24" fill="currentColor">
               <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
@@ -2829,7 +2839,7 @@
           </div>
           <div class="contact-option-text">
             <div class="contact-option-label">LinkedIn</div>
-            <div class="contact-option-value">linkedin.com/in/christiesaavedra</div>
+            <div class="contact-option-value">linkedin.com/in/christie-stephenson-saavedra</div>
           </div>
         </a>
       </div>
