Summary:  Download healthcare-dashboard.html and add to your site Apply the 2 str_replace changes to index.html Test: clicking the dashboard card should now go to the case study page, with demo accessible from there

--- a/index.html
+++ b/index.html
@@ -2499,7 +2499,7 @@
         </div>
 
         <div class="case-studies-grid">
-          <div class="case-study-card" data-project="dashboard" onclick="window.location='dashboard.html'">
+          <div class="case-study-card" data-project="dashboard" onclick="window.location='healthcare-dashboard.html'">
             <div class="case-study-meta">
               <span class="case-study-role">UX Designer / Developer</span>
               <span class="case-study-org">· Healthcare Consulting</span>
@@ -2511,7 +2511,7 @@
               <span class="result-tag">15+ Features Beyond Scope</span>
               <span class="result-tag">Real-Time Analytics</span>
             </div>
-            <a href="dashboard.html" class="case-study-link">View Demo <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M5 12h14M12 5l7 7-7 7"/></svg></a>
+            <a href="healthcare-dashboard.html" class="case-study-link">View Case Study <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M5 12h14M12 5l7 7-7 7"/></svg></a>
           </div>
 
           <div class="case-study-card" data-project="xacteched" onclick="window.location='xacteched-campaign.html'">
