updated extension for sticky note

--- a/arizona-esthetics.html
+++ b/arizona-esthetics.html
@@ -486,7 +486,7 @@
     <div id="thisPageContent">
       <div class="sticky-project">
         <div class="sticky-project-label">Currently Viewing</div>
-        <div class="sticky-project-name" id="currentProjectName">Healthcare Operations Dashboard</div>
+        <div class="sticky-project-name" id="currentProjectName">Arizona Esthetics Institute</div>
       </div>
       
       <div class="sticky-body">
@@ -559,8 +559,8 @@
 </div>
 <script>
 // ========== FLOATING STICKY NOTE WIDGET FUNCTIONALITY ==========
-const CURRENT_PAGE_KEY = 'healthcare-dashboard';
-const CURRENT_PAGE_NAME = 'Healthcare Operations Dashboard';
+const CURRENT_PAGE_KEY = 'arizona-esthetics';
+const CURRENT_PAGE_NAME = 'Arizona Esthetics Institute';
 
 function expandWidget() {
   document.getElementById('stickyWidget').classList.remove('minimized');
