Summary for Step 3 Add badge HTML to all 6 cards: CardProject IDLine1dashboard~30652xacteched~30803resolute~30954arizona~31105palmview~31256gardner~3140
Summary for Step 3
Add badge HTML to all 6 cards:
CardProject IDLine1dashboard~30652xacteched~30803resolute~30954arizona~31105palmview~31256gardner~3140

--- a/index.html
+++ b/index.html
@@ -3063,6 +3063,10 @@
 
         <div class="case-studies-grid">
           <div class="case-study-card" data-project="dashboard" onclick="window.location='healthcare-dashboard.html'">
+            <div class="card-badges">
+              <div class="card-badge viewed hidden" data-badge="viewed"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"><polyline points="20 6 9 17 4 12"/></svg></div>
+              <div class="card-badge bookmark" data-badge="bookmark" onclick="event.stopPropagation(); toggleBookmark('dashboard')"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"/></svg><span class="has-note"></span></div>
+            </div>
             <div class="case-study-meta">
               <span class="case-study-role">UX Designer / Developer</span>
               <span class="case-study-org">· Healthcare Consulting</span>
@@ -3078,6 +3082,10 @@
           </div>
 
           <div class="case-study-card" data-project="xacteched" onclick="window.location='xacteched-campaign.html'">
+            <div class="card-badges">
+              <div class="card-badge viewed hidden" data-badge="viewed"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"><polyline points="20 6 9 17 4 12"/></svg></div>
+              <div class="card-badge bookmark" data-badge="bookmark" onclick="event.stopPropagation(); toggleBookmark('xacteched')"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"/></svg><span class="has-note"></span></div>
+            </div>
             <div class="case-study-meta">
               <span class="case-study-role">Training Manager</span>
               <span class="case-study-org">· Xactware</span>
@@ -3093,6 +3101,10 @@
           </div>
 
           <div class="case-study-card" data-project="resolute" onclick="window.location='resolute-services.html'">
+            <div class="card-badges">
+              <div class="card-badge viewed hidden" data-badge="viewed"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"><polyline points="20 6 9 17 4 12"/></svg></div>
+              <div class="card-badge bookmark" data-badge="bookmark" onclick="event.stopPropagation(); toggleBookmark('resolute')"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"/></svg><span class="has-note"></span></div>
+            </div>
             <div class="case-study-meta">
               <span class="case-study-role">IT Consultant / Co-founder</span>
               <span class="case-study-org">· Resolute Services</span>
@@ -3108,6 +3120,10 @@
           </div>
 
           <div class="case-study-card" data-project="arizona" onclick="window.location='arizona-esthetics.html'">
+            <div class="card-badges">
+              <div class="card-badge viewed hidden" data-badge="viewed"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"><polyline points="20 6 9 17 4 12"/></svg></div>
+              <div class="card-badge bookmark" data-badge="bookmark" onclick="event.stopPropagation(); toggleBookmark('arizona')"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"/></svg><span class="has-note"></span></div>
+            </div>
             <div class="case-study-meta">
               <span class="case-study-role">Instructional Designer / Co-founder</span>
               <span class="case-study-org">· Arizona Esthetics Institute</span>
@@ -3123,6 +3139,10 @@
           </div>
 
           <div class="case-study-card" data-project="palmview" onclick="window.location='palmview-lab.html'">
+            <div class="card-badges">
+              <div class="card-badge viewed hidden" data-badge="viewed"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"><polyline points="20 6 9 17 4 12"/></svg></div>
+              <div class="card-badge bookmark" data-badge="bookmark" onclick="event.stopPropagation(); toggleBookmark('palmview')"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"/></svg><span class="has-note"></span></div>
+            </div>
             <div class="case-study-meta">
               <span class="case-study-role">Computer Lab Manager</span>
               <span class="case-study-org">· Palmview K-8</span>
@@ -3138,6 +3158,10 @@
           </div>
 
           <div class="case-study-card" data-project="gardner" onclick="window.location='gardner-chiropractic.html'">
+            <div class="card-badges">
+              <div class="card-badge viewed hidden" data-badge="viewed"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"><polyline points="20 6 9 17 4 12"/></svg></div>
+              <div class="card-badge bookmark" data-badge="bookmark" onclick="event.stopPropagation(); toggleBookmark('gardner')"><svg viewBox="0 0 24 24" fill="currentColor"><path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"/></svg><span class="has-note"></span></div>
+            </div>
             <div class="case-study-meta">
               <span class="case-study-role">Co-founder / Marketing</span>
               <span class="case-study-org">· Gardner Chiropractic</span>
